--- a/VeriParkCaseStudy/app/src/main/res/layout/fragment_detail.xml
+++ b/VeriParkCaseStudy/app/src/main/res/layout/fragment_detail.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.detail.DetailFragment">
 
+    
     <TextView
         android:id="@+id/symbol_text"
         android:layout_width="wrap_content"
@@ -139,5 +140,18 @@
         app:layout_constraintTop_toTopOf="@+id/change_text"
         app:tint="@color/colorUpper"
         android:contentDescription="@string/degisim" />
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chart"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/offer_text"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
